# mcu-sdk

./: .gitignore  CMakeLists.txt  Kconfig  README.md  meshanics_provisioning.h.example
docs/: SECURITY-AND-PROVISIONING.md
include/meshanics/: agent.h
lib/: README.md  meshanics_agent.c
lib/applog/: applog.c  applog.h
lib/ota/: ota.c  ota.h
lib/plat/: plat.h  plat_counter.c  plat_mcuboot.c  plat_net.c  plat_net.h  plat_store.c  plat_store.h
lib/provision/: claim_proto.c  claim_proto.h  enroll.c  enroll.h  identity.c  identity.h  provisioning.c  provisioning.h
lib/provision/test/: claim_proto_test.c
lib/verify/: ed25519.h  ed25519_fiat.c  manifest_verify.c  manifest_verify.h
samples/sensor-node/: CMakeLists.txt  prj.conf  sysbuild.conf
samples/sensor-node/src/: main.c
zephyr/: module.yml
